<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:padding="15dp"
        android:text="@string/create_contact"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText

        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:drawablePadding="8dp"
        android:focusableInTouchMode="true"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:paddingLeft="5dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:singleLine="true"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/edt_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:drawablePadding="8dp"
        android:focusableInTouchMode="true"
        android:hint="@string/enter_number"
        android:inputType="number"
        android:maxLength="10"
        android:paddingLeft="5dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColorHint="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@drawable/btn_border"
            android:text="@string/cancel" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@drawable/btn_border"
            android:text="@string/create" />
    </LinearLayout>
</LinearLayout>